Refactor to use redux-first-router
- Works!

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,6 @@
     <noscript>
       This being a massive JavaScript application, you can't run without it.
     </noscript>
-    <div id="root"></div>
+    <div id="react-root"></div>
   </body>
 </html>
